[package]
name = "rhythmical"
version = "0.1.0"
authors = ["Robert Brignull <robertbrignull@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rouille = "3.0.0"
serde_derive = "1.0.87"
serde_json = "1.0.38"
serde = "1.0.87"
percent-encoding = "1.0.1"
htmlescape = "0.3.1"
rand = "0.8.4"
regex = "1.1.0"
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
time = "0.3.31"

[build-dependencies]
walkdir = "2.3.2"
