[package]
name = "rhythmical"
version = "0.1.0"
authors = ["Robert Brignull <robertbrignull@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
lazy_static = "1.5.0"
rouille = "3.6.2"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde = "1.0.219"
percent-encoding = "1.0.1"
htmlescape = "0.3.1"
rand = "0.9.1"
regex = "1.11.1"
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
time = "0.3.41"

[build-dependencies]
walkdir = "2.5.0"
